# Logger

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  logger.py  logger.py~  main.py  pyproject.toml  requirements.txt  setup.py
docs/: LEVEL.md  LEVEL_COLOR.md  LOGGER.md
src/: main.py
src/Logger/: __init__.py  debug.py
src/Logger/core/: core.py
src/core/: level.py  logger.py
src/logger/: __init__.py  logger.py  main.py
src/logger/core/: core.py
